--- a/themes/si8/less/custom/header.less
+++ b/themes/si8/less/custom/header.less
@@ -208,10 +208,6 @@ body.user-logged-in{
       height: 50px;
     }
 
-    section{
-      display: block !important;
-    }
-
     button {
       color: #fff;
       background-color: #333;
